Fix overflow

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -41,6 +41,10 @@ a {
   }
 }
 
+html {
+  @apply m-0 p-0 overflow-x-hidden;
+}
+
 body {
   @apply bg-white text-grey-light;
   font-family: 'Pier Sans', sans-serif;
